--- a/CrossPlatformLibrary.Messaging/CrossPlatformLibrary.Messaging.csproj
+++ b/CrossPlatformLibrary.Messaging/CrossPlatformLibrary.Messaging.csproj
@@ -44,12 +44,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="CrossPlatformLibrary">
-      <HintPath>..\packages\CrossPlatformLibrary.1.0.6-alpha\lib\portable-net45+wp8+MonoAndroid+MonoTouch\CrossPlatformLibrary.dll</HintPath>
+    <Reference Include="CrossPlatformLibrary, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CrossPlatformLibrary.1.0.13-alpha\lib\portable-net45+wp8+wpa81+netcore45+monoandroid1+xamarin.ios10\CrossPlatformLibrary.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="readme.txt" />
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
