--- a/CrossPlatformLibrary.Messaging.NuGet/Package.nuspec
+++ b/CrossPlatformLibrary.Messaging.NuGet/Package.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>CrossPlatformLibrary.Messaging</id>
-    <version>1.0.8-alpha</version>
+    <version>1.0.9-alpha</version>
     <title>CrossPlatformLibrary.Messaging</title>
     <authors>Thomas Galliker</authors>
     <licenseUrl>http://opensource.org/licenses/Apache-2.0</licenseUrl>
@@ -11,65 +11,77 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <summary>CrossPlatformLibrary.Messaging is a plug-in for platform-independent communication (email, telephone, sms).</summary>
     <description>CrossPlatformLibrary.Messaging is a plug-in for platform-independent communication (email, telephone, sms).</description>
+    <tags>
+      xamarin pcl CrossPlatformLibrary CrossPlatformLibrary.Messaging plugin for Messaging email mail telephone phone call sms
+      windows phone winphone wp8 wpa81 win81 windowsphone android xamarin.forms xamarin.ios ios monoandroid monodroid monotouch mvvmcross mvvmlight
+    </tags>
     <releaseNotes />
     <copyright>Copyright 2015</copyright>
     <language>en-US</language>
     <dependencies>
-
-      <!--CommonServiceLocator-->
-      <group targetFramework="MonoTouch10">
-        <dependency id="CommonServiceLocator" version="1.3" />
-      </group>
-      <group targetFramework="xamarin.ios10">
-        <dependency id="CommonServiceLocator" version="1.3" />
-      </group>
-      <group targetFramework="MonoAndroid10">
-        <dependency id="CommonServiceLocator" version="1.3" />
-      </group>
-      <group targetFramework="wp8">
-        <dependency id="CommonServiceLocator" version="1.3" />
-      </group>
-      <group targetFramework="portable-net45+wp8+wpa81+netcore45+monoandroid1+xamarin.ios10">
-        <dependency id="CommonServiceLocator" version="1.3" />
-      </group>
-
-      <!--CrossPlatformLibrary-->
-      <group targetFramework="MonoTouch10">
+      <group targetFramework="monotouch10">
         <dependency id="CrossPlatformLibrary" />
       </group>
       <group targetFramework="xamarin.ios10">
         <dependency id="CrossPlatformLibrary" />
       </group>
-      <group targetFramework="MonoAndroid10">
+      <group targetFramework="monoandroid10">
         <dependency id="CrossPlatformLibrary" />
       </group>
       <group targetFramework="wp8">
         <dependency id="CrossPlatformLibrary" />
       </group>
-      <group targetFramework="portable-net45+wp8+wpa81+netcore45+monoandroid1+xamarin.ios10">
+      <!--<group targetFramework="wpa81">
+        <dependency id="CrossPlatformLibrary" />
+      </group>
+      <group targetFramework="win81">
+        <dependency id="CrossPlatformLibrary" />
+      </group>-->
+      <group targetFramework="portable-net45+wp8+wpa81+win81+netcore45+monoandroid10+monotouch10+xamarin.ios10">
         <dependency id="CrossPlatformLibrary" />
       </group>
     </dependencies>
   </metadata>
   <files>
     <!--PCL-->
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\portable-net45+wp8+wpa81+netcore45+monoandroid1+xamarin.ios10\CrossPlatformLibrary.Messaging.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\portable-net45+wp8+wpa81+win81+netcore45+monoandroid10+monotouch10+xamarin.ios10\CrossPlatformLibrary.Messaging.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\portable-net45+wp8+wpa81+win81+netcore45+monoandroid10+monotouch10+xamarin.ios10\CrossPlatformLibrary.Messaging.xml" />
 
     <!--Xamarin.Android-->
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\MonoAndroid10\CrossPlatformLibrary.Messaging.dll" />
-    <file src="..\CrossPlatformLibrary.Messaging.Android\bin\Release\CrossPlatformLibrary.Messaging.Platform.dll" target="lib\MonoAndroid10\CrossPlatformLibrary.Messaging.Platform.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging.Android\bin\Release\CrossPlatformLibrary.Messaging.Platform.dll" target="lib\monoandroid10\CrossPlatformLibrary.Messaging.Platform.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging.Android\bin\Release\CrossPlatformLibrary.Messaging.Platform.xml" target="lib\monoandroid10\CrossPlatformLibrary.Messaging.Platform.xml" />
+    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\monoandroid10\CrossPlatformLibrary.Messaging.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\monoandroid10\CrossPlatformLibrary.Messaging.xml" />
 
     <!--Xamarin.iOS Classic API-->
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\MonoTouch10\CrossPlatformLibrary.Messaging.dll" />
-    <file src="..\CrossPlatformLibrary.Messaging.iOS\bin\iPhone\Release\CrossPlatformLibrary.Messaging.Platform.dll" target="lib\MonoTouch10\CrossPlatformLibrary.Messaging.Platform.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging.iOS\bin\iPhone\Release\CrossPlatformLibrary.Messaging.Platform.dll" target="lib\monotouch10\CrossPlatformLibrary.Messaging.Platform.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging.iOS\bin\iPhone\Release\CrossPlatformLibrary.Messaging.Platform.xml" target="lib\monotouch10\CrossPlatformLibrary.Messaging.Platform.xml" />
+    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\monotouch10\CrossPlatformLibrary.Messaging.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\monotouch10\CrossPlatformLibrary.Messaging.xml" />
 
     <!--Xamarin.iOS Unified API-->
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\xamarin.ios10\CrossPlatformLibrary.Messaging.dll" />
     <file src="..\CrossPlatformLibrary.Messaging.iOSUnified\bin\iPhone\Release\CrossPlatformLibrary.Messaging.Platform.dll" target="lib\xamarin.ios10\CrossPlatformLibrary.Messaging.Platform.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging.iOSUnified\bin\iPhone\Release\CrossPlatformLibrary.Messaging.Platform.xml" target="lib\xamarin.ios10\CrossPlatformLibrary.Messaging.Platform.xml" />
+    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\xamarin.ios10\CrossPlatformLibrary.Messaging.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\xamarin.ios10\CrossPlatformLibrary.Messaging.xml" />
 
     <!--Windows Phone 8-->
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\wp8\CrossPlatformLibrary.Messaging.dll" />
     <file src="..\CrossPlatformLibrary.Messaging.WindowsPhone8\Bin\Release\CrossPlatformLibrary.Messaging.Platform.dll" target="lib\wp8\CrossPlatformLibrary.Messaging.Platform.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging.WindowsPhone8\Bin\Release\CrossPlatformLibrary.Messaging.Platform.xml" target="lib\wp8\CrossPlatformLibrary.Messaging.Platform.xml" />
+    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\wp8\CrossPlatformLibrary.Messaging.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\wp8\CrossPlatformLibrary.Messaging.xml" />
+
+    <!--Windows Phone 8.1-->
+    <!--<file src="..\CrossPlatformLibrary.Messaging.WindowsPhone81\Bin\Release\CrossPlatformLibrary.Messaging.Platform.dll" target="lib\wpa81\CrossPlatformLibrary.Messaging.Platform.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging.WindowsPhone81\Bin\Release\CrossPlatformLibrary.Messaging.Platform.xml" target="lib\wpa81\CrossPlatformLibrary.Messaging.Platform.xml" />
+    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\wpa81\CrossPlatformLibrary.Messaging.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\wpa81\CrossPlatformLibrary.Messaging.xml" />-->
+
+    <!--Windows Store-->
+    <!--<file src="..\CrossPlatformLibrary.Messaging.WindowsStore\Bin\Release\CrossPlatformLibrary.Messaging.Platform.dll" target="lib\win81\CrossPlatformLibrary.Messaging.Platform.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging.WindowsStore\Bin\Release\CrossPlatformLibrary.Messaging.Platform.xml" target="lib\win81\CrossPlatformLibrary.Messaging.Platform.xml" />
+    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\win81\CrossPlatformLibrary.Messaging.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\win81\CrossPlatformLibrary.Messaging.xml" />-->
 
     <file src="tools\init.ps1" target="tools\init.ps1" />
     <file src="tools\install.ps1" target="tools\install.ps1" />
