--- a/CrossPlatformLibrary.Messaging.NuGet/Package.nuspec
+++ b/CrossPlatformLibrary.Messaging.NuGet/Package.nuspec
@@ -6,7 +6,7 @@
     <title>CrossPlatformLibrary.Messaging</title>
     <authors>Thomas Galliker</authors>
     <licenseUrl>http://opensource.org/licenses/Apache-2.0</licenseUrl>
-    <projectUrl>https://nuget.org/packages/CrossPlatformLibrary.Messaging</projectUrl>
+    <projectUrl>https://github.com/thomasgalliker/CrossPlatformLibrary.Messaging</projectUrl>
     <iconUrl>https://nuget.org/Content/Images/packageDefaultIcon-50x50.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <summary>CrossPlatformLibrary.Messaging is a plug-in for platform-independent communication (email, telephone, sms).</summary>
@@ -16,7 +16,7 @@
       windows phone winphone wp8 wpa81 win81 windowsphone android xamarin.forms xamarin.ios ios monoandroid monodroid monotouch mvvmcross mvvmlight
     </tags>
     <releaseNotes />
-    <copyright>Copyright 2015</copyright>
+    <copyright>Copyright 2016</copyright>
     <language>en-US</language>
     <dependencies>
       <group targetFramework="monotouch10">
