--- a/CrossPlatformLibrary.Messaging.NuGet/Package.nuspec
+++ b/CrossPlatformLibrary.Messaging.NuGet/Package.nuspec
@@ -15,30 +15,16 @@
       xamarin pcl CrossPlatformLibrary CrossPlatformLibrary.Messaging plugin for Messaging email mail telephone phone call sms
       windows phone winphone wp8 wpa81 win81 windowsphone android xamarin.forms xamarin.ios ios monoandroid monodroid monotouch mvvmcross mvvmlight
     </tags>
-    <releaseNotes />
+    <releaseNotes >
+      1.0.9
+      - Stable release for Xamarin.Android, iOS, Windows Phone 8, 8.1 and Windows Store 8.1
+    </releaseNotes>
     <copyright>Copyright 2016</copyright>
     <language>en-US</language>
     <dependencies>
-      <group targetFramework="monotouch10">
-        <dependency id="CrossPlatformLibrary" version="1.0.63" />
-      </group>
-      <group targetFramework="xamarin.ios10">
-        <dependency id="CrossPlatformLibrary" version="1.0.63" />
-      </group>
-      <group targetFramework="monoandroid10">
-        <dependency id="CrossPlatformLibrary" version="1.0.63" />
-      </group>
-      <group targetFramework="wp8">
-        <dependency id="CrossPlatformLibrary" version="1.0.63" />
-      </group>
-      <!--<group targetFramework="wpa81">
-        <dependency id="CrossPlatformLibrary" version="1.0.63" />
-      </group>
-      <group targetFramework="win81">
-        <dependency id="CrossPlatformLibrary" version="1.0.63" />
-      </group>-->
-      <group targetFramework="portable-net45+wp8+wpa81+win81+netcore45+monoandroid10+monotouch10+xamarin.ios10">
-        <dependency id="CrossPlatformLibrary" version="1.0.63" />
+      <group>
+        <dependency id="CrossPlatformLibrary" version="1.0.73" />
+        <dependency id="Guards" version="1.0.11" />
       </group>
     </dependencies>
   </metadata>
