--- a/Samples/MessagingSample/MessagingSample.UWP/project.json
+++ b/Samples/MessagingSample/MessagingSample.UWP/project.json
@@ -1,6 +1,8 @@
 ﻿{
   "dependencies": {
     "CrossPlatformLibrary": "2.0.0-pre6",
+    "CrossPlatformLibrary.Messaging": "2.0.0-pre3",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "Xamarin.Forms": "2.3.1.114"
   },
   "frameworks": {
