--- a/Samples/MessagingSample/MessagingSample.WinPhone/MessagingSample.WinPhone.csproj
+++ b/Samples/MessagingSample/MessagingSample.WinPhone/MessagingSample.WinPhone.csproj
@@ -117,6 +117,10 @@
       <HintPath>..\..\..\packages\CrossPlatformLibrary.2.0.0-pre6\lib\wpa81\CrossPlatformLibrary.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="CrossPlatformLibrary.Messaging, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\CrossPlatformLibrary.Messaging.2.0.0-pre3\lib\wpa81\CrossPlatformLibrary.Messaging.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Guards, Version=1.0.0.0, Culture=neutral, PublicKeyToken=ac6aedb73a72f46e, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Guards.1.0.11\lib\wpa81\Guards.dll</HintPath>
       <Private>True</Private>
