--- a/Samples/MessagingSample/MessagingSample.WinPhone/packages.config
+++ b/Samples/MessagingSample/MessagingSample.WinPhone/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="wpa81" />
   <package id="CrossPlatformLibrary" version="2.0.0-pre6" targetFramework="wpa81" />
+  <package id="CrossPlatformLibrary.Messaging" version="2.0.0-pre3" targetFramework="wpa81" />
   <package id="Guards" version="1.0.11" targetFramework="wpa81" />
   <package id="Tracing" version="1.0.2" targetFramework="wpa81" />
   <package id="Xamarin.Forms" version="2.3.1.114" targetFramework="wpa81" />
