Fix UWP runtime error

--- a/CrossPlatformLibrary.Messaging.UWP/CrossPlatformLibrary.Messaging.UWP.csproj
+++ b/CrossPlatformLibrary.Messaging.UWP/CrossPlatformLibrary.Messaging.UWP.csproj
@@ -7,12 +7,12 @@
     <ProjectGuid>{37184D31-12A8-4727-A1BD-D4EDF41F9F92}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CrossPlatformLibrary.Messaging.UWP</RootNamespace>
-    <AssemblyName>CrossPlatformLibrary.Messaging.UWP</AssemblyName>
+    <RootNamespace>CrossPlatformLibrary.Messaging</RootNamespace>
+    <AssemblyName>CrossPlatformLibrary.Messaging</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.14393.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.10586.0</TargetPlatformMinVersion>
+    <TargetPlatformVersion>10.0.10240.0</TargetPlatformVersion>
+    <TargetPlatformMinVersion>10.0.10240.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -35,6 +35,7 @@
     <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\CrossPlatformLibrary.Messaging.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <PlatformTarget>x86</PlatformTarget>
